// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deposit SDK Context DepositSDKProvider renders and provides context values 1`] = `
<Text>
  API Key: a9d9cc56-a524-4dd7-8008-59f36bd6fa97
</Text>
`;

exports[`Deposit SDK Context useDepositSDK provides access to the NativeRampsSdk instance 1`] = `
<Text>
  Test Component
</Text>
`;
